# pbs-exporter-rs

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docs/: ADDITIONAL_METRICS.md  COMMENT_FIELD_INVESTIGATION.md  MEMORY_EFFICIENCY.md  METRICS_COVERAGE.md  METRICS_IMPLEMENTATION_REF.md  SNAPSHOT_METRICS.md
grafana_dashboard/: sample_dashboard.json
src/: client.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  server.rs
src/client/: types.rs
src/metrics/: collectors.rs  mod.rs  registry.rs  updates.rs
tests/: integration_test.rs  metrics_cardinality_test.rs  metrics_gc_test.rs  metrics_snapshot_test.rs  metrics_tape_test.rs  metrics_task_test.rs  server_test.rs
